# porous_structure_generator

./: .gitignore  CMakeLists.txt  README.md  create_structure.cpp  requirements.txt  structure_creator.py
include/: Point3D.h  atom.h  box.h  sphere.h
plotter/: app.js  index.html
src/: atom.cpp  atom.py  box.cpp  box.py  main.cpp  point3D.py  sphere.cpp  utils.py
